--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -69,6 +69,6 @@ footer{
     background: orange;
     border-top: black;
     border-style: solid;
-    background:linear-gradient( 45deg,white,orange,orange,black);
+    background:linear-gradient( 45deg,black,orange,orange,white);
 
 }
