--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -3,7 +3,14 @@ html{
     background-repeat:repeat; 
 
 }
+#list{
+    float:left;
+    padding-bottom:450px;
+    padding-left:7px;
+    padding-right:7px;
 
+    
+}
 body{
      font-family: sans-serif, ariel;
      width:800px;
@@ -19,6 +26,11 @@ body{
 #text{
     padding:12px;
 }
+#cat{
+    padding-left: 100px;
+    padding-right: 100px;
+       
+}
 
 h1{
     font-size: 30pt;
@@ -28,6 +40,7 @@ h1{
     padding-bottom: 6px;
     padding-top: 16px;
  }
+
  
  h3{
      padding-left:170px;
@@ -41,6 +54,7 @@ h1{
      border-style:solid;
      border-color:black;
      padding:auto;
+     
      background:orange;
      background:linear-gradient( 45deg,white,orange,orange,black);
  }
@@ -48,7 +62,7 @@ h1{
 #bigLetter::first-letter{
     font-size: 46pt;
 }
-img{
+#pump{
     float : left;
     padding-top: 20px;
     padding-left:16px;
